Several updates to load the user’s lists on ready, and then wire up the button to add the selected users to the selected list.

--- a/extension/css/main.css
+++ b/extension/css/main.css
@@ -4,4 +4,9 @@ ol.stream-items .ui-selected { background: #FFFFCC; }
 .twlistbuilder-actions {
   background-color: #f5f8fa;
   padding: 20px;
+  border: 2px solid black;
+}
+
+.twlistbuilder-actions h1 {
+  margin-bottom: 10px;
 }
