--- a/extension/css/main.css
+++ b/extension/css/main.css
@@ -1,12 +1,34 @@
 ol.stream-items .ui-selecting { background: #FECA40; }
 ol.stream-items .ui-selected { background: #FFFFCC; }
 
-.twlistbuilder-actions {
+#twlistbuilder-actions {
   background-color: #f5f8fa;
   padding: 20px;
   border: 2px solid black;
 }
 
-.twlistbuilder-actions h1 {
+#twlistbuilder-actions h1 {
   margin-bottom: 10px;
+}
+
+#twlistbuilder-progress {
+}
+
+#twlistbuilder-content {
+  display:none;
+}
+
+#twlistbuilder-content h4 {
+  margin-top: 5px;
+}
+
+#twlistbuilder-notice {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #3c763d;
+  padding: 5px;
+  margin-top: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  display:none;
 }
